--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: dev_rpg
 description: Become a tech lead, slay bugs, and don't get fired.
-
+publish_to: none
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
 # followed by an optional build number separated by a +.
@@ -24,7 +24,14 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  flare_flutter: ^3.0.2
+  #flare_flutter: ^3.0.2
+
+  flare_flutter:
+    git:
+      url: https://github.com/CarGuo/Flare-Flutter.git
+      path: flare_flutter
+     # ref: main # branch name
+
   auto_size_text: ^3.0.0
 
 dev_dependencies:
