--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,42 +13,35 @@ environment:
   # For Google I/O we are being very specific about pinning to specific branch revision.
   # This is flutter commit hash b593f5167bce84fb3cad5c258477bf3abc1b14eb, tagged
   # as Flutter version 1.5.4.
-  sdk: '>=2.18.0 <3.0.0'
+  sdk: ">=3.3.0 <4.0.0"
 
 dependencies:
+  auto_size_text: ^3.0.0
   cupertino_icons: ^1.0.5
-  flutter:
-    sdk: flutter
-  intl: any
-  provider: ^6.0.4
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  #flare_flutter: ^3.0.2
-
   flare_flutter:
     git:
       url: https://github.com/CarGuo/Flare-Flutter.git
       path: flare_flutter
-     # ref: main # branch name
+  flutter:
+    sdk: flutter
 
-  auto_size_text: ^3.0.0
+  intl: any
+  provider: ^6.0.4
 
 dev_dependencies:
   flutter_driver:
     sdk: flutter
   flutter_test:
     sdk: flutter
+  git: ^2.0.0
   logging: ^1.1.0
-  git: ^2.0.0 
-  t_stats: ^3.0.0 
+  t_stats: ^3.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -65,24 +58,24 @@ flutter:
     - assets/docs/code_chomper_beta.dart
 
   fonts:
-      - family: SpaceMonoRegular
-        fonts:
-          - asset: assets/fonts/SpaceMono-Regular.ttf
-      - family: SpaceMonoBold
-        fonts:
-          - asset: assets/fonts/SpaceMono-Bold.ttf
-      - family: RobotoCondensedBold
-        fonts:
-          - asset: assets/fonts/RobotoCondensed-Bold.ttf
-      - family: RobotoRegular
-        fonts:
-          - asset: assets/fonts/Roboto-Regular.ttf
-      - family: MontserratMedium
-        fonts:
-          - asset: assets/fonts/Montserrat-Medium.otf
-      - family: MontserratRegular
-        fonts:
-          - asset: assets/fonts/Montserrat-Regular.otf
-      - family: MontserratBold
-        fonts:
-          - asset: assets/fonts/Montserrat-Bold.otf
+    - family: SpaceMonoRegular
+      fonts:
+        - asset: assets/fonts/SpaceMono-Regular.ttf
+    - family: SpaceMonoBold
+      fonts:
+        - asset: assets/fonts/SpaceMono-Bold.ttf
+    - family: RobotoCondensedBold
+      fonts:
+        - asset: assets/fonts/RobotoCondensed-Bold.ttf
+    - family: RobotoRegular
+      fonts:
+        - asset: assets/fonts/Roboto-Regular.ttf
+    - family: MontserratMedium
+      fonts:
+        - asset: assets/fonts/Montserrat-Medium.otf
+    - family: MontserratRegular
+      fonts:
+        - asset: assets/fonts/Montserrat-Regular.otf
+    - family: MontserratBold
+      fonts:
+        - asset: assets/fonts/Montserrat-Bold.otf
